# llamator-mcp-server

./: .env.example  .gitignore  DOCUMENTATION.md  README.dev.md  README.md  docker-compose.yml  dockerfile  llamator_mcp_server_curl_tutorial.ipynb  pyproject.toml
notebooks/: llamator_mcp_server_tutorial.ipynb
src/llamator_mcp_server/: __init__.py  app_factory.py  main.py  worker.py  worker_settings.py
src/llamator_mcp_server/api/: asgi_wrappers.py  http.py  http_routes.py  mcp_server.py  mcp_tools.py  middleware.py  openapi.py  security.py
src/llamator_mcp_server/api/schemas/: __init__.py  mcp.py
src/llamator_mcp_server/config/: settings.py
src/llamator_mcp_server/domain/: models.py  services.py
src/llamator_mcp_server/domain/ports/: artifacts_storage.py
src/llamator_mcp_server/infra/: artifacts_storage.py  job_store.py  llamator_runner.py  minio_artifacts_storage.py  redis.py  s3_presign.py
src/llamator_mcp_server/infra/artifacts/: factory.py  minio.py
src/llamator_mcp_server/utils/: env.py  logging.py
tests/: .env.test  conftest.py
tests/integration/: test_http_api.py  test_mcp_api.py
