[tool.poetry]
name = "llamator-mcp-server"
version = "0.2.0"
description = "MCP server for LLAMATOR with ARQ/Redis task broker"
authors = ["LLAMATOR Core Team"]
readme = "README.md"
packages = [{ include = "llamator_mcp_server", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
arq = "^0.26.3"
fastapi = "^0.115.5"
llamator = "^3.4.0"
mcp = "^1.3.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
redis = "^5.2.0"
uvicorn = { version = "^0.32.1", extras = ["standard"] }
prometheus-fastapi-instrumentator = "^7.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
ruff = "^0.7.4"
icecream = "^2.1.8"

[tool.poetry.scripts]
llamator-mcp-server = "llamator_mcp_server.main:main"
llamator-mcp-worker = "llamator_mcp_server.worker:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
line_length = 120
include_trailing_comma = true
known_first_party = ['llamator']
known_third_party = [
    'IPython',
    'PIL',
    'pillow',
    'pymupdf',
    'cv2',
    'dotenv',
    'editdistance',
    'fastapi',
    'fire',
    'gitpython',
    'hydra',
    'joblib',
    'loguru',
    'luigi',
    'matplotlib',
    'neptune',
    'neptune_config',
    'nltk',
    'numpy',
    'omegaconf',
    'pandas',
    'pqdm',
    'pydantic',
    'pytest',
    'pytorch_lightning',
    'requests',
    'scipy',
    'setuptools',
    'shapely',
    'skimage',
    'sklearn',
    'streamlit',
    'torch',
    'torchvision',
    'tqdm',
    'typer',
    'huggingface_hub',
    'datasets',
]
skip_gitignore = true

[tool.black]
line_length = 120

[tool.pytest.ini_options]
norecursedirs = [
    '.git',
    '.tox',
    '.env',
    'dist',
    'build',
    'migrations',
    'docker',
    'config',
    'notebooks',
    'research',
]
python_files = ['test_*.py']
addopts = [
    '-ra',
    '--showlocals',
    '--strict-markers',
    '--ignore=docs/conf.py',
    '--ignore=setup.py',
    '--ignore=ci',
    '--ignore=.eggs',
    '--doctest-modules',
    '--doctest-glob=\\*.rst',
    '--tb=short',
]
testpaths = ['tests']

[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
warn_unused_ignores = false
show_error_codes = true
check_untyped_defs = true
no_implicit_optional = true
mypy_path = ['src']

[[tool.mypy.overrides]]
module = "llamator.*"
ignore_missing_imports = false
disallow_untyped_defs = true

[tool.pylint.basic]
good-names = "i,j,x,y,z,x1,y1,z1,x2,y2,z2,cv,df,dx,dy,dz,w,h,c,b,g,qa,q,a"
max-args = 8

[tool.pylint.main]
load-plugins = ["pylint.extensions.docparams"]

[tool.pylint.messages_control]
disable = [
    "suppressed-message",
    "import-error",
    "too-few-public-methods",
    "unused-import",
    "wrong-import-order",
    "too-many-instance-attributes",
    "missing-module-docstring",
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.miscellaneous]
notes = ["XXX"]

[tool.pylint.parameter_documentation]
accept-no-param-doc = false
accept-no-raise-doc = false
accept-no-return-doc = false
accept-no-yields-doc = false
default-docstring-type = "google"

[tool.pylint.design]
max-locals = 20

[tool.pylint.similarities]
min-similarity-lines = 10

[tool.bandit]
exclude_dirs = ["venv"]
# B101 disables errors for asserts in the code
# remember to not use asserts for security and control flows
skips = ["B101"]

[tool.ruff]
line-length = 120